fixed username dropdown not showing on homepage; username dropdown options now change depends on the user group; added first name validation rule on register page, but its not working properly at the moment;

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,11 +48,11 @@ h6 {
 p {
   font-size: 15px; }
 
-.main-block {
+/*.main-block {
   padding: 90px 0; }
   @media (max-width: 768px) {
     .main-block {
-      padding: 45px 0; } }
+      padding: 45px 0; } }*/
 
 .light-bg {
   background: #f3f4f7; }
@@ -138,7 +138,7 @@ p {
     .fixed {
       border: none;
       background: #252a33; } }
-
+/*
 .dropdown-menu {
   background: #030303; }
 
@@ -149,7 +149,7 @@ p {
   transition: 0.3s; }
   .dropdown-item:hover {
     color: #fff;
-    background: none; }
+    background: none; }*/
 
 .ti-plus {
   font-size: 14px;
@@ -158,10 +158,10 @@ p {
 .slider {
   background: url(../img/homepage_images/background.jpg) no-repeat;
   background-size: cover;
-  min-height: 800px; }
-  @media (max-width: 992px) {
+  min-height: 640px; }
+  @media (max-width: 720px) {
     .slider {
-      min-height: 700px; } }
+      min-height: 640px; } }
 
 .btn-outline-light {
   padding: 10px 16px; }
@@ -596,10 +596,10 @@ footer {
 .map-toggle {
   display: none; }
 
-.filter-dropdown {
+/*.filter-dropdown {
   display: inline-block; }
   .filter-dropdown select {
-    border-radius: 0; }
+    border-radius: 0; }*/
 
 .detail-checkbox-wrap {
   padding: 22px 0; }
